--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -1,5 +1,5 @@
 :root {
-    --vp-font-family-base: '苹方-简', '霞鹜文楷 GB 屏幕阅读版', 'Maple UI', 'Inter var experimental', 'Inter var', 'Inter',
+    --vp-font-family-base: '微软雅黑', '苹方-简', '霞鹜文楷 GB 屏幕阅读版', 'Inter var experimental', 'Inter var', 'Inter',
         ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
         Roboto, 'Helvetica Neue', Helvetica, Arial, 'Noto Sans', sans-serif,
         'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
