--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -3,7 +3,7 @@
         ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
         Roboto, 'Helvetica Neue', Helvetica, Arial, 'Noto Sans', sans-serif,
         'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-    --vp-font-family-mono: 'SF Mono', Menlo, Monaco, Consolas, '苹方-简', ui-monospace, SFMono-Regular,
+    --vp-font-family-mono: 'SF Mono', Menlo, Monaco, Consolas, ui-monospace, SFMono-Regular,'苹方-简', 
         'Liberation Mono', 'Courier New', monospace;
 }
 
