--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -1,10 +1,10 @@
 :root {
-    --vp-font-family-base: '微软雅黑', '苹方-简', '霞鹜文楷 GB 屏幕阅读版', 'Inter var experimental', 'Inter var', 'Inter',
+    --vp-font-family-base: '更纱黑体 Mono SC Nerd', '微软雅黑', '苹方-简', '霞鹜文楷',
         ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
         Roboto, 'Helvetica Neue', Helvetica, Arial, 'Noto Sans', sans-serif,
         'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-    --vp-font-family-mono: 'SF Mono', Menlo, Monaco, Consolas, ui-monospace, SFMono-Regular,'苹方-简', 
-        'Liberation Mono', 'Courier New', monospace;
+    --vp-font-family-mono: 'SF Mono', Menlo, Monaco, Consolas, ui-monospace, SFMono-Regular,
+        'Liberation Mono', 'Courier New', '苹方-简', monospace;
 }
 
 :root {
