--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -3,8 +3,8 @@
         ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
         Roboto, 'Helvetica Neue', Helvetica, Arial, 'Noto Sans', sans-serif,
         'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-    --vp-font-family-mono: 'SF Mono', Menlo, Monaco, Consolas, ui-monospace, SFMono-Regular,
-        'Liberation Mono', 'Courier New', '苹方-简', monospace;
+    --vp-font-family-mono: 'Dank Mono', 'SF Mono', Menlo, Monaco, Consolas, ui-monospace, SFMono-Regular,
+        'Liberation Mono', 'Courier New', '霞鹜文楷', '苹方-简', monospace;
 }
 
 :root {
