--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -1,27 +1,133 @@
+/********************************************************
+*                        字体                           *
+********************************************************/
 :root {
-    --vp-font-family-base: '更纱黑体 Mono SC Nerd', '微软雅黑', '苹方-简', '霞鹜文楷',
+    --vp-font-family-base: 'Inter', '更纱黑体 Mono SC Nerd', '微软雅黑', '苹方-简',
         ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
         Roboto, 'Helvetica Neue', Helvetica, Arial, 'Noto Sans', sans-serif,
         'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
     --vp-font-family-mono: 'Dank Mono', 'SF Mono', Menlo, Monaco, Consolas, ui-monospace, SFMono-Regular,
-        'Liberation Mono', 'Courier New', '霞鹜文楷', '苹方-简', monospace;
+        'Liberation Mono', 'Courier New', '苹方-简', monospace;
 }
 
+
+/********************************************************
+*                        代码块                         *
+********************************************************/
 :root {
     --vp-code-line-height: 1.7;
     --vp-code-font-size: 0.92em;
 
-    --vp-code-block-color: var(--vp-c-text-light-1);
-    --vp-code-block-bg: var(--vp-c-white-soft);
-    --vp-code-line-highlight-color: rgba(240, 255, 213, 0.7);
-    --vp-code-line-number-color: var(--vp-c-text-light-2);
+    --vp-code-block-color: rgb(15, 15, 15);
+    --vp-code-block-bg: rgb(250, 248, 255);
+
+    --vp-code-line-highlight-color: rgb(237, 233, 248);
+    --vp-code-line-number-color: rgb(33, 33, 33);
 }
 
 .dark {
-    --vp-code-block-color: var(--vp-c-text-dark-1);
-    --vp-code-block-bg: #292d3e;
-    --vp-code-line-highlight-color: rgba(2, 17, 2, 0.85);
-    --vp-code-line-number-color: var(--vp-c-text-dark-3);
+    --vp-code-block-color: rgb(209, 209, 209);
+    --vp-code-block-bg: rgb(12, 18, 20);
 
-    --vp-code-block-bg: var(--vp-c-bg-alt);
+    --vp-code-line-highlight-color: rgb(41, 41, 41);
+    --vp-code-line-number-color: rgb(175, 175, 175);
+}
+
+/********************************************************
+*                   Vite Colors                         *
+********************************************************/
+:root {
+    --vp-c-brand: #646cff;
+    --vp-c-brand-light: #747bff;
+    --vp-c-brand-lighter: #9499ff;
+    --vp-c-brand-lightest: #bcc0ff;
+    --vp-c-brand-dark: #535bf2;
+    --vp-c-brand-darker: #454ce1;
+    --vp-c-brand-dimm: rgba(100, 108, 255, 0.08);
+}
+
+/********************************************************
+*                       Buttons                         *
+********************************************************/
+:root {
+    --vp-button-brand-border: var(--vp-c-brand-light);
+    --vp-button-brand-text: var(--vp-c-text-dark-1);
+    --vp-button-brand-bg: var(--vp-c-brand);
+    --vp-button-brand-hover-border: var(--vp-c-brand-light);
+    --vp-button-brand-hover-text: var(--vp-c-text-dark-1);
+    --vp-button-brand-hover-bg: var(--vp-c-brand-light);
+    --vp-button-brand-active-border: var(--vp-c-brand-light);
+    --vp-button-brand-active-text: var(--vp-c-text-dark-1);
+    --vp-button-brand-active-bg: var(--vp-button-brand-bg);
+}
+
+/********************************************************
+*                     主页 Logo                         *
+********************************************************/
+:root {
+    --vp-home-hero-name-color: transparent;
+    --vp-home-hero-name-background: -webkit-linear-gradient(120deg, #bd34fe 30%, #41d1ff);
+    --vp-home-hero-image-background-image: linear-gradient(-45deg, #bd34fe 50%, #47caff 50%);
+    --vp-home-hero-image-filter: blur(40px);
+}
+
+@media (min-width: 640px) {
+    :root {
+        --vp-home-hero-image-filter: blur(56px);
+    }
+}
+
+@media (min-width: 960px) {
+    :root {
+        --vp-home-hero-image-filter: blur(72px);
+    }
+}
+
+/********************************************************
+*                     :::tip                            *
+********************************************************/
+:root {
+    --vp-custom-block-tip-border: var(--vp-c-brand);
+    --vp-custom-block-tip-text: var(--vp-c-brand-darker);
+    --vp-custom-block-tip-bg: var(--vp-c-brand-dimm);
+}
+
+.dark {
+    --vp-custom-block-tip-border: var(--vp-c-brand);
+    --vp-custom-block-tip-text: var(--vp-c-brand-lightest);
+    --vp-custom-block-tip-bg: var(--vp-c-brand-dimm);
+}
+
+/********************************************************
+*                     algolia                           *
+********************************************************/
+.DocSearch {
+    --docsearch-primary-color: var(--vp-c-brand) !important;
+}
+
+
+
+/********************************************************
+*                 VitePress: Custom fix                 *
+********************************************************/
+.dark .vp-doc a,
+.dark .vp-doc a>code,
+.dark .VPNavBarMenuLink.VPNavBarMenuLink:hover,
+.dark .VPNavBarMenuLink.VPNavBarMenuLink.active,
+.dark .link.link:hover,
+.dark .link.link.active,
+.dark .edit-link-button.edit-link-button,
+.dark .pager-link .title {
+    color: var(--vp-c-brand-lighter);
+}
+
+.dark .vp-doc a:hover,
+.dark .vp-doc a>code:hover {
+    color: var(--vp-c-brand-lightest);
+    opacity: 1;
+}
+
+/* Transition by color instead of opacity */
+.dark .vp-doc .custom-block a {
+    transition: color 0.25s;
 }
