--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -6,7 +6,8 @@
         ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
         Roboto, 'Helvetica Neue', Helvetica, Arial, 'Noto Sans', sans-serif,
         'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-    --vp-font-family-mono: 'Dank Mono', 'SF Mono', Menlo, Monaco, Consolas, ui-monospace, SFMono-Regular,
+    --vp-font-family-mono: 'Dank Mono', 'SF Mono', '更纱黑体 Mono SC Nerd',
+        Menlo, Monaco, Consolas, ui-monospace, SFMono-Regular,
         'Liberation Mono', 'Courier New', '苹方-简', monospace;
 }
 
@@ -19,18 +20,18 @@
     --vp-code-font-size: 0.92em;
 
     --vp-code-block-color: rgb(15, 15, 15);
-    --vp-code-block-bg: rgb(250, 248, 255);
+    --vp-code-block-bg: rgb(245, 245, 245);
 
     --vp-code-line-highlight-color: rgb(237, 233, 248);
     --vp-code-line-number-color: rgb(33, 33, 33);
 }
 
 .dark {
-    --vp-code-block-color: rgb(209, 209, 209);
-    --vp-code-block-bg: rgb(12, 18, 20);
+    --vp-code-block-color: var(--vp-c-text-dark-1);
+    --vp-code-block-bg: var(--vp-c-bg-alt);
 
-    --vp-code-line-highlight-color: rgb(41, 41, 41);
-    --vp-code-line-number-color: rgb(175, 175, 175);
+    --vp-code-line-highlight-color: rgba(0, 0, 0, 0.5);
+    --vp-code-line-number-color: var(--vp-c-text-dark-3);
 }
 
 
