--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -132,6 +132,23 @@
 }
 
 
+/********************************************************
+*                     Plugin                            *
+********************************************************/
+.medium-zoom-overlay {
+    background-color: var(--vp-c-bg) !important;
+    z-index: 100;
+}
+
+.medium-zoom-overlay~img {
+    z-index: 101;
+    border-radius: 0;
+}
+
+.medium-zoom--opened .medium-zoom-overlay {
+    opacity: 0.98 !important;
+}
+
 
 /********************************************************
 *                 VitePress: Custom fix                 *
