--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -100,9 +100,9 @@
 ********************************************************/
 :root {
     --vp-home-hero-name-color: transparent;
-    --vp-home-hero-name-background: -webkit-linear-gradient(120deg, #bd34fe 30%, #41d1ff);
-    --vp-home-hero-image-background-image: linear-gradient(-45deg, #bd34fe 50%, #47caff 50%);
-    --vp-home-hero-image-filter: blur(40px);
+    --vp-home-hero-name-background: -webkit-linear-gradient(120deg, #966fe4 40%, #4fc4d8);
+    --vp-home-hero-image-background-image: linear-gradient(-45deg, #9279c290 30%, #d6c0e890);
+    --vp-home-hero-image-filter: blur(30px);
 }
 
 @media (min-width: 640px) {
