--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -141,9 +141,15 @@
 
 
 /********************************************************
-*                     Plugin                            *
+*                    Medium Zoom                        *
 ********************************************************/
+.medium-zoom-overlay {
+    z-index: 20;
+}
 
+.medium-zoom-image {
+    z-index: 21;
+}
 
 
 /********************************************************
