--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -101,7 +101,7 @@
 :root {
     --vp-home-hero-name-color: transparent;
     --vp-home-hero-name-background: -webkit-linear-gradient(120deg, #966fe4 40%, #4fc4d8);
-    --vp-home-hero-image-background-image: linear-gradient(-45deg, #9279c290 30%, #d6c0e890);
+    --vp-home-hero-image-background-image: linear-gradient(-45deg, rgba(117, 116, 158, 0.565) 30%, #c7bece90);
     --vp-home-hero-image-filter: blur(30px);
 }
 
