--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -11,6 +11,14 @@
         'Liberation Mono', 'Courier New', '苹方-简', monospace;
 }
 
+/********************************************************
+*                    Bg Colors                          *
+********************************************************/
+:root {
+    --vp-c-white: rgb(255, 255, 255);
+    --vp-c-white-soft: rgb(249, 250, 251);
+}
+
 
 /********************************************************
 *                   Vite Colors                         *
