--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -2,21 +2,26 @@
 *                        字体                           *
 ********************************************************/
 :root {
-    --vp-font-family-base: '更纱黑体 Mono SC Nerd', '微软雅黑', '苹方-简',
+    --vp-font-family-base: 'PingFang SC',
         ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
         Roboto, 'Helvetica Neue', Helvetica, Arial, 'Noto Sans', sans-serif,
         'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-    --vp-font-family-mono: 'Dank Mono', 'SF Mono', '更纱黑体 Mono SC Nerd',
+    --vp-font-family-mono: 'Dank Mono', 'SF Mono',
         Menlo, Monaco, Consolas, ui-monospace, SFMono-Regular,
-        'Liberation Mono', 'Courier New', '苹方-简', monospace;
+        'Liberation Mono', 'Courier New', 'PingFang SC', monospace;
 }
 
 /********************************************************
 *                    Bg Colors                          *
 ********************************************************/
 :root {
-    --vp-c-white: rgb(255, 255, 255);
-    --vp-c-white-soft: rgb(249, 250, 251);
+    --vp-c-black: #030303;
+    --vp-c-black-soft: #0f0f0f;
+}
+
+.dark {
+    --vp-c-bg-alpha-with-backdrop: rgba(17, 17, 17, 0.6);
+    --vp-c-bg-alpha-without-backdrop: rgba(10, 10, 10, 0.6);
 }
 
 
