--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -51,14 +51,27 @@
 
     --vp-code-line-highlight-color: rgb(237, 233, 248);
     --vp-code-line-number-color: rgb(33, 33, 33);
+
+    --vp-code-tab-text-color: var(--vp-c-text-light-2);
+    --vp-code-tab-divider: var(--vp-c-divider-dark-2);
+    --vp-code-tab-hover-text-color: var(--vp-c-text-light-1);
+    --vp-code-tab-active-text-color: var(--vp-c-text-light-1);
+    --vp-code-tab-active-bar-color: var(--vp-c-brand);
 }
 
 .dark {
     --vp-code-block-color: var(--vp-c-text-dark-1);
     --vp-code-block-bg: var(--vp-c-bg-alt);
 
-    --vp-code-line-highlight-color: rgba(0, 0, 0, 0.5);
+    --vp-code-line-highlight-color: rgba(102, 99, 126, 0.5);
     --vp-code-line-number-color: var(--vp-c-text-dark-3);
+
+    --vp-code-tab-text-color: var(--vp-c-text-dark-2);
+    --vp-code-tab-bg: var(--vp-code-block-bg);
+    --vp-code-tab-divider: var(--vp-c-divider-dark-2);
+    --vp-code-tab-hover-text-color: var(--vp-c-text-dark-1);
+    --vp-code-tab-active-text-color: var(--vp-c-text-dark-1);
+    --vp-code-tab-active-bar-color: var(--vp-c-brand);
 }
 
 
